--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matrix-led-font",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A font for using MAX7219 LED Matrix with Arduino.",
   "main": "src/index.js",
   "author": "Lyle Troxell <lyle@troxell.com>(http://lyle.troxell.com)",
@@ -14,17 +14,14 @@
   "scripts": {
     "watch": "npm-watch",
     "test": "mocha test",
-    "docs": "esdoc"
+    "docs": "./scripts/docs-build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/lyle/matrix-led-font.git"
   },
   "devDependencies": {
-    "mocha": "^2.4.5",
-    "npm-watch": "^0.6.0",
-    "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0",
-    "esdoc-node": "^1.0.3"
+    "mocha": "^6.2.1",
+    "npm-watch": "^0.6.0"
   }
 }
